assets/css/style.css
/* Google fonts import */

/* Asterisk wildcard selector to override default styles added by the browser */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

/* General styles */
h1,
h2,
h3 {
    text-transform: capitalize;
    letter-spacing: 2px;
    color: #fcb935;
}

hr {
    border: 1px solid #fcb935;
}

body {
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    color: #fcb935;
}

.nomargin {
    margin: 0px;
}

.hidden-heading {
    display: none;
}

img {
    max-width: 50vh;
    max-height: 50vh;
}

.parallax {
    /* The image used */
    background-image: url("../images/screenshot.2.png");

    /* Set a specific height */
    min-height: 500px;

    /* Create the parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

/* Header */
header {
    background-color: #121f28;
    padding: 0 1rem;
    position: fixed;
    z-index: 99;
    width: 100%;
    min-height: 74px;
    display: flex;
    justify-content: space-between;
    align-items: baseline;
}

header a {
    text-decoration: none;
    color: inherit;
}

h1 {
    letter-spacing: 2px;
    color: #fcb935;
    border-radius: 20px;
    text-align: center;
    padding: 15px 0 10px 60px;
}

#menu {
    text-transform: uppercase;
    letter-spacing: 3px;
    list-style-type: none;
    color: #fcb935;
    font-size: 110%;
}

#menu>li {
    margin-bottom: 2em;
    border: 1px solid #fcb935;
    text-align: center;
}

.active {
    border-bottom: 1px solid #fcb935;
}

/* Nav bar */
nav {
    position: absolute;
    background-color: #121f28;
    width: 100%;
    padding: 1rem;
    left: 0;
    top: 100%;
    display: none;
    box-shadow: 0 2px 2px #121f28;
    border-radius: 0 0 20px 20px;
}

/* Nav toggle */
#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
}

.nav-toggle-label {
    font-size: 2rem;
}

/* Main */
main {
    margin-top: 74px;
    flex: 1 0 auto;
    flex-direction: column;
}

/* Welcome section */
#welcome {
    width: 100%;
    height: 75vh;
    position: relative;
    top: 100%;
}

.welcome-text {
    position: absolute;
    text-align: start;
    padding: 50px 10px;
    background-color: rgba(18, 31, 40, 0.7);
    width: 80%;
    margin: 10%;
    font-size: 130%;
    border-radius: 20px;
}

.welcome-text h2 {
    padding-bottom: 10px;
    text-align: center;
    text-transform: uppercase;
}

.welcome-text p {
    padding-bottom: 20px;
}

/* Reasons section */
#reasons {
    top: 100%;
    width: 100%;
    background-color: rgba(18, 31, 40, 95%);
}

#reasons1,
#reasons2 {
    width: 80%;
    margin: 20px auto;
    position: relative;
}

#reasons h2 {
    padding: 20px 0 20px 0;
    font-size: 150%;
    text-transform: uppercase;
    text-align: center;
}

#reasons1 p,
#reasons2 p {
    padding-bottom: 20px;
    padding-left: 10px;
    padding-top: 5px;
}

#reasons hr {
    border: 1px solid #fcb935;
    margin: 3px 0;
}

/* Image for reasons section */
#circle-image {
    background: url('../images/screenshot.3.png') no-repeat top center / cover;
    height: 90vw;
    width: 90vw;
    margin-bottom: 20px;
    /* Makes the square image into a circle */
    border-radius: 50%;
    max-width: 300px;
    max-height: 300px;
}

#reasons-image {
    display: flex;
    align-items: center;
    justify-content: center;
}

/* Contact us section */
#contact {
    background: url("../images/screenshot.1.png") no-repeat center center/cover;
    height: 600px;
    width: 100%;
    position: relative;
    margin: 0 auto;
    top: 100%;
}

.contact-text {
    position: absolute;
    text-align: center;
    padding: 50px 10px;
    background-color: rgba(18, 31, 40, 0.7);
    width: 80%;
    margin: 10%;
    font-size: 130%;
    border-radius: 20px;
}

.contact-text h2 {
    padding-bottom: 20px;
    text-align: center;
    text-decoration: underline;
}

.contact-text ul {
    list-style-type: none;
    text-align: center;
}

.contact-text a {
    text-decoration: none;
    color: #fcb935;
}

.contact-text li {
    padding-bottom: 10px;

}

/* Location/Where to find us section */
#location {
    width: 100%;
    align-self: center;
    padding-bottom: 60px;
    margin: 0px auto;
}

#location hr {
    width: 75%;
    margin: 0 auto;
}

.map {
    width: 100%;
    height: 200px;
    border: 0;
    border-radius: 0%;
    display: flex;

}

.map iframe {
    width: 100%;
}

.address {
    text-align: center;
    background-color: rgba(18, 31, 40);
    height: 200px;
    width: 100%;
    border-radius: 0px;
}

.address li {
    list-style-type: none;
    padding: 5px 0 5px 0;
}

.address h2 {
    padding: 20px 0 10px 0;
    font-weight: bold;
    text-transform: uppercase;
}


/* Footer */
footer {
    background-color: #121f28;
    bottom: 0;
    position: fixed;
    width: 100%;
}

#social-media i {
    color: #fcb935;
    text-decoration: none;
    font-size: 150%;
}

#social-media {
    display: flex;
    flex-direction: row;
    justify-content: space-evenly;
    list-style-type: none;
    padding: 20px 20px;
}



/* Treatments page css*/
.parallax2 {
    /* The image used */
    background-image: url("../images/screenshot.3.png");

    /* Set a specific height */
    min-height: 500px;

    /* Create the parallax scrolling effect */
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

/* Main */
/* Treatments section */
#treatments-title {
    height: 100vh;
    width: 100%;
    background-color: rgba(18, 31, 40, 0.6);
    display: flex;
    align-items: center;
    justify-content: flex-start;

}

#treatments-title h2 {
    font-size: 400%;
    text-align: center;
    padding-left: 20px;

}

.solidblock {
    height: 20px;
    background-color: #121f28;
}
/* ... */

